--- a/style.css
+++ b/style.css
@@ -210,3 +210,67 @@ h1 {
   font-weight: 600;
   margin: 0 auto;
 }
+
+/* ============= Reference ============================== */
+
+.reference {
+  height: 300px;
+}
+
+.reference__card {
+  background-color: #414141;
+  padding: 20px;
+  width: 30%;
+  border-radius: 15px;
+}
+
+.reference__card:last-child {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  color: #c9c9c9;
+}
+
+.reference__card:last-child img {
+  max-height: 30px;
+  max-width: 30px;
+  margin-bottom: 10px;
+}
+
+.reference__card__title {
+  font-size: 16px;
+  color: #fff;
+  font-weight: 300;
+  padding: 0;
+  margin: 0;
+}
+
+.name__card__title {
+  padding: 0;
+  margin: 0;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
+.reference__contact__row {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.btn--phone {
+  max-width: 60px;
+  max-height: 60px;
+  padding: 0;
+}
+
+.btn--phone img {
+  margin: auto;
+}
+
+.btn--shadow {
+  box-shadow: 0 0 10px 0px #7996fc26;
+}
